Submenu z-index fix

--- a/wp-content/themes/SablonaZO-KO/less/info-line.less
+++ b/wp-content/themes/SablonaZO-KO/less/info-line.less
@@ -154,7 +154,7 @@
 				ul {
                                         /*display: none;*/
 					position: absolute;
-					z-index: 10;
+					z-index: 300;
 					background-color: @green-dark;
 					min-width: 160px;
                                         left: 0;
